manifests/petclinic-service.yml
kind: Service
apiVersion: v1
metadata:
  name: petclinic
spec:
  clusterIP: None
  selector:
    run: petclinic
  ports:
    - name: port1
      protocol: TCP
      port: 8080
      targetPort: 8080
