manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: petclinic.com
    http:
      paths:
      - backend:
          serviceName: petclinic
          servicePort: 8080
        path: /
